--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,7 +35,7 @@ jobs:
         id: set-variable
         run: |
           echo "ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}" >> $GITHUB_ENV
-          echo "ECR_REPOSITORY=dyj-ecr-test" >> $GITHUB_ENV
+          echo "ECR_REPOSITORY=dyj-ecr" >> $GITHUB_ENV
           echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_ENV
 
       - name: Set up Docker buildx
@@ -90,8 +90,8 @@ jobs:
       - name: Commit Manifest files
         run: |
           cd Kustomize_test
-          git config --global user.email "euijoo3233@gmail.com"
-          git config --global user.name "euijoo"
+          git config --global user.email "dyjung@gmail.com"
+          git config --global user.name "dyjung"
           git add .
           git commit -m "Update Manifest file Image Tag $IMAGE_TAG"
           git push -u origin main
