--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -74,7 +74,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           # kubernetes yaml 파일 저장
-          repository: Leeeuijooo/Kustomize_test
+          repository: DoyoungJ/Kustomize_test
           ref: main
           token: ${{ secrets.ACTION_TOKEN }} # Repository Token 은 미리 발급받야아합니다.
           path: Kustomize_test
